--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,8 @@
     --main-bg-color: #edf5fe;
     --light-blue: #03a9f4;
     --dark-blue: #028bca;
+    --teal-blue: #98BAE7;
+    --slow-blue: #7267CB;
   }
 
   body {
@@ -42,7 +44,7 @@ section.download {
     font-size: 18px;
     padding: 8px 40px;
     margin-top: 15px;
-    background: var(--light-blue);
+    background: var(--teal-blue);
     text-decoration: none;
     border: none;
     border-radius: 5px;
@@ -52,5 +54,5 @@ section.download {
   }
 
   .send-btn-container a:hover {
-      background: var(--dark-blue);
+      background: var(--slow-blue);
   }
