--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 :root {
-    --main-bg-color: #edf5fe;
+    --main-bg-color: #93FFD8;
     --light-blue: #03a9f4;
     --dark-blue: #028bca;
-    --teal-blue: #98BAE7;
+    --teal-blue: #6E3CBC;
     --slow-blue: #7267CB;
   }
 
