--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 :root {
-    --main-bg-color: #93FFD8;
+    --main-bg-color: #D6E5FA;
     --light-blue: #03a9f4;
     --dark-blue: #028bca;
     --teal-blue: #6E3CBC;
